k8s/miniurl-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniurl-frontend
  labels:
    app: miniurl-frontend
spec:
  type: NodePort
  # type: ClusterIP
  ports:
    - port: 8080
      # targetPort: 81
  selector:
    app: miniurl-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniurl-frontend
  labels:
    app: miniurl-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniurl-frontend
  template:
    metadata:
      labels:
        app: miniurl-frontend
    spec:
      containers:
        - image: mkowoods/miniurl-frontend:0.1.2
          name: miniurl-frontend
          ports:
            - containerPort: 8080
